testsuite/tests/typecheck/should_fail/T22684.stderr

T22684.hs:8:7: error: [GHC-88464]
    • Found hole: _ :: r
      Where: ‘r’ is a rigid type variable bound by
               the type signature for:
                 q :: forall r. r
               at T22684.hs:7:1-6
    • In the first argument of ‘p’, namely ‘_’
      In the expression: p _
      In an equation for ‘q’: q = p _
    • Relevant bindings include q :: r (bound at T22684.hs:8:1)
      Constraints include Int ~ Bool (from T22684.hs:8:7)
      Valid hole fits include q :: r (bound at T22684.hs:8:1)

T22684.hs:19:16: error: [GHC-88464]
    • Found hole: _ :: Free p a c
      Where: ‘k’, ‘p’ are rigid type variables bound by
               the instance declaration
               at T22684.hs:18:10-26
             ‘a’, ‘c’ are rigid type variables bound by
               the type signature for:
                 (T22684..) :: forall b c a. Free p b c -> Free p a b -> Free p a c
               at T22684.hs:19:7
    • In an equation for ‘T22684..’: Sum T22684.. Prod = _
      In the instance declaration for ‘Category (Free p)’
    • Relevant bindings include
        (.) :: Free p b c -> Free p a b -> Free p a c
          (bound at T22684.hs:19:7)
      Constraints include
        b ~ (b2, c1) (from T22684.hs:19:9-12)
        b ~ Either a1 b1 (from T22684.hs:19:3-5)
      Valid hole fits include
        q :: forall r. r
          with q @(Free p a c)
          (bound at T22684.hs:8:1)
